--- a/index.html
+++ b/index.html
@@ -57,6 +57,28 @@
     <!-- end of header  -->
 
 
+    <!--About Us   -->
+    <section id="about" class="py-5">
+        <div class="container ">
+            <div class="row">
+                <div class="col-md-6 my-4">
+                    <h1 class="text-uppercase title-text display-3 ">About Us</h1>
+                    <p class="text ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur natus ipsum ab perferendis libero minima unde earum molestias adipisci , sunt inventore assumenda id cum. Incidunt, ad velit. Dignissimos, odit delectus.</p>
+                    <a href="#" class="btn hvr-right my-4  text-capitalize">Know more</a>
+                </div>
+                <div class="col-md-6 my-4  about-images d-none d-lg-block">
+                    <img src="/img/5.jpg" alt="" class="img-1 img-thumbnail about-img" class="img-fluid">
+                    <img src="/img/4.jpg" alt="" class="img-2 img-thumbnail about-img">
+                    <img src="/img/3.jpg" alt="" class="img-3 img-thumbnail about-img">
+                    <img src="/img/2.jpg" alt="" class="img-4 img-thumbnail about-img">
+                    <img src="/img/2.jpg" alt="" class="img-5 img-thumbnail about-img">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End of about us  -->
+
 
 
 
