Product section and Video , and Bootstrap Cards

--- a/index.html
+++ b/index.html
@@ -79,6 +79,186 @@
     </section>
     <!-- End of about us  -->
 
+    <!--Product Section   -->
+    <section id="produckt" class="my-50">
+        <div class="container">
+            <div class="content-4">
+                <ul class="nav " role="tablist">
+                    <li class="nav-item nav-tabs">
+                        <a href="#pie" class="active tab-item" role="tab" data-toggle="tab">
+                            <i class="fas fa-apple-alt"></i>
+                            <span>Apple</span>
+                        </a>
+                    </li>
+                    <li class="nav-item nav-tabs">
+                        <a href="#bread" class="tab-item" role="tab" data-toggle="tab">
+                            <i class="fas fa-bread-slice"></i>
+                            <span>Bread</span>
+                        </a>
+                    </li>
+                    <li class="nav-item nav-tabs">
+                        <a href="#candy" class="tab-item" role="tab" data-toggle="tab">
+                            <i class="fas fa-candy-cane"></i>
+                            <span>Candy</span>
+                        </a>
+                    </li>
+                    <li class="nav-item nav-tabs">
+                        <a href="#cookie" class="active tab-item" role="tab" data-toggle="tab">
+                            <i class="fas fa-cookie"></i>
+                            <span>Cookie</span>
+                        </a>
+                    </li>
+                </ul>
+                <!-- Tabs -->
+                <div class="tab-content">
+                    <div class=" active tab-panel" role="tab-panel" id="pie">
+                        <div class="row  justify-content-md-center">
+                            <div class="col-md-3 offset-md-1">
+                                <h4>Apple</h4>
+                            </div>
+                            <div class="col-md-7">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis odit possimus, aut debitis commodi ipsa ut, sapiente quos illo fugit dolorem libero sequi dolorum labore ad mollitia hic. Quos, iste?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" role="tabpanel" id="bread">
+                        <div class="row justify-content-me-center">
+                            <div class="col-md-3  offset-md-1">
+                                <h4>Home Made Organic Bread</h4>
+                            </div>
+                            <div class="col-md-4">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta eligendi cupiditate cum earum, odio sunt porro veritatis animi officiis, velit laudantium dolor omnis ea fugiat officia. Velit fugiat cupiditate asperiores?</p>
+
+                            </div>
+                            <div class="col-md-4">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus at saepe explicabo natus, dolorem ducimus earum sit, modi quisquam consequatur repudiandae rerum ullam velit laborum quo debitis harum, voluptatem
+                                    ea?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" role="tabpanel" id="candy">
+                        <div class="row justify-content-md-center">
+                            <div class="col-md-4 offset-md-1">
+                                <h4>Candies</h4>
+                            </div>
+                            <div class="row pt-3">
+                                <div class="col-md-10 offset-md-1">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam eius eos itaque alias fugiat quia repellat explicabo tempore deserunt asperiores eaque sint culpa cumque dicta, amet quidem, dolorum ipsum quas?</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End of Product Section -->
+
+    <!-- Card Section start here -->
+    <section class="like p-5">
+        <div class="video-container">
+            <video class="bg-video" autoplay muted loop>
+                <source src="/img/coverr-panning-shot-of-coffee-machine-1586434003874.mp4" type="video/mp4"> 
+                
+            </video>
+            <div class="conatier-fluid">
+                <!-- titlte -->
+                <div class="row">
+                    <div class="col text-center py-5">
+                        <h1 class="text-uppercase text-color font-weight-bold">Most demanded</h1>
+                    </div>
+                </div>
+                <!-- end of title -->
+                <div class="row justify-content-aroound align-items-center">
+                    <div class="col-xl-3 col-lg-4  col-sm rotate">
+                        <div class="card text-center mb-3 coffe-card">
+                            <div class="card-header">
+                                <h4 class="font-weight-light title-text">Espreso</h4>
+                            </div>
+                            <div class="card-body">
+                                <img src="/img/2.jpg" class="img-fluid rounded" alt="">
+                            </div>
+                            <div class="card-footer">
+                                Muffin
+                            </div>
+                            <div class="back">
+                                <div class="back-content">
+                                    <h1 class="text-uppercase font-weight font-light">Only for</h1>
+                                    <h3 class="mb-3">25$</h3>
+                                    <a href="#" class="btn hvr-right my-4  text-capitalize">Order</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-4  col-sm rotate">
+                        <div class="card text-center mb-3 coffe-card">
+                            <div class="card-header">
+                                <h4 class="font-weight-light title-text">Espreso</h4>
+                            </div>
+                            <div class="card-body">
+                                <img src="/img/2.jpg" class="img-fluid rounded" alt="">
+                            </div>
+                            <div class="card-footer">
+                                Muffin
+                            </div>
+                            <div class="back">
+                                <div class="back-content">
+                                    <h1 class="text-uppercase font-weight font-light">Only for</h1>
+                                    <h3 class="mb-3">25$</h3>
+                                    <a href="#" class="btn hvr-right my-4  text-capitalize">Order</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-4  col-sm rotate">
+                        <div class="card text-center mb-3 coffe-card">
+                            <div class="card-header">
+                                <h4 class="font-weight-light title-text">Espreso</h4>
+                            </div>
+                            <div class="card-body">
+                                <img src="/img/2.jpg" class="img-fluid rounded" alt="">
+                            </div>
+                            <div class="card-footer">
+                                Muffin
+                            </div>
+                            <div class="back">
+                                <div class="back-content">
+                                    <h1 class="text-uppercase font-weight font-light">Only for</h1>
+                                    <h3 class="mb-3">25$</h3>
+                                    <a href="#" class="btn hvr-right my-4  text-capitalize">Order</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-4  col-sm rotate">
+                        <div class="card text-center mb-3 coffe-card">
+                            <div class="card-header">
+                                <h4 class="font-weight-light title-text">Espreso</h4>
+                            </div>
+                            <div class="card-body">
+                                <img src="/img/2.jpg" class="img-fluid rounded" alt="">
+                            </div>
+                            <div class="card-footer">
+                                Muffin
+                            </div>
+                            <div class="back">
+                                <div class="back-content">
+                                    <h1 class="text-uppercase font-weight font-light">Only for</h1>
+                                    <h3 class="mb-3">25$</h3>
+                                    <a href="#" class="btn hvr-right my-4  text-capitalize">Order</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
 
 
 
